--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: JS
 email: jerrid.schilling@outlook.com
+author: Jerrid Schilling
 description: > # this means to ignore newlines until "baseurl:"
   This is the personal site for Jerrid Schilling. It showcases his experience and projects.
 baseurl: "" # the subpath of your site, e.g. /blog
