making changes to existing files

--- a/_config.yml
+++ b/_config.yml
@@ -1,64 +1,37 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: http://www.jerridschilling.com/
+baseurl: ''
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Jerrid Schilling
+email: jerrid.schilling@outlook.com
+description: "The homepage of software engineer, Jerrid Schilling, used to provide information about his education, experience and portfolio."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Jerrid Schilling
   pic: 1
-  position: Lead Designer
+  position: Software Engineer
   social:
     - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
+      url: http://twitter.com/schillingjerrid
     - title: linkedin
-      url: #
-
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+      url: https://www.linkedin.com/in/jerrid-schilling-20b06b8b
+    - title: github
+      url: https://github.com/schillingjerrid
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
+    url: http://twitter.com/schillingjerrid
+  - title: linkedin
     url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/schillingjerrid
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Cheyenne, WY
 
 # Build settings
 markdown: kramdown
