--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,13 @@ position: Software Engineer
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/schillingjerrid
-  - title: linkedin
-    url: https://www.linkedin.com/in/jerrid-schilling-20b06b8b
   - title: github
     url: https://github.com/schillingjerrid
   - title: codepen
     url: http://codepen.io/schillingjerrid/
 
 # Postal address (add as many lines as necessary)
-address: Cheyenne, WY
+address: Loveland, CO
 
 # Build settings
 markdown: kramdown
